--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,11 @@
   </head>
   <body>
     <header>
-      <h1>My New Hugo Site</h1>
+      <div class="container-fluid bg-secondary">
+    <div class="row">
+        <span class="h2 text-dark">Jeffrey Komo</span>
+    </div>
+</div>
 
 
 
@@ -55,7 +59,11 @@
 
     </main>
     <footer>
-      <p>Copyright 2024. All rights reserved.</p>
+      <div class="container-fluid bg-dark">
+    <div class="row">
+        <span class="fs-8 text-light">Copyright 2024. All rights reserved.</span>
+    </div>
+</div>
 
       
 
